@@ -306,6 +306,9 @@ DEFINE_GUID(MEDIASUBTYPE_PS2_SUB,
 DEFINE_GUID(CLSID_DXR,
 0x760a8f35, 0x97e7, 0x479d, 0xaa, 0xf5, 0xda, 0x9e, 0xff, 0x95, 0xd7, 0x51);
 
+DEFINE_GUID(CLSID_madVR,
+0xe1a8b82a, 0x32ce, 0x4b0d, 0xbe, 0x0d, 0xaa, 0x68, 0xc7, 0x72, 0xe4, 0x23);
+
 //
 // Ogg
 //
@@ -532,6 +535,10 @@ DEFINE_GUID(MEDIASUBTYPE_X264,
 // 34363278-0000-0010-8000-00AA00389B71
 DEFINE_GUID(MEDIASUBTYPE_x264,
 0x34363278, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xAA, 0x00, 0x38, 0x9B, 0x71);
+
+// 6F29D2AD-E130-45AA-B42F-F623AD354A90
+DEFINE_GUID(MEDIASUBTYPE_ArcsoftH264,
+0x6F29D2AD, 0xE130, 0x45AA, 0xB4, 0x2F, 0xF6, 0x23, 0xAD, 0x35, 0x4A, 0x90);
 
 // 48535356-0000-0010-8000-00AA00389B71
 DEFINE_GUID(MEDIASUBTYPE_VSSH,
